# fact-dg

./: README.md  analyze_20bit_chunks.py  benchmark.py  combine_and_upload_chunks.py  example_usage.py  pyproject.toml  requirements.txt  resume_20bit_generation.py  verify_compression.py
src/: __init__.py  augment.py  generate.py  generate_fast.py  generate_optimized.py  generate_optimized_fixed.py  upload_to_hf.py
