[tool.poetry]
name = "synthetic-math-dataset"
version = "0.1.0"
description = "Synthetic dataset generator for mathematical problems with prime number products"
authors = ["Generated"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
datasets = "^2.14.0"
pyarrow = "^13.0.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-dataset = "src.generate:main"
